spacing correction in the index

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -2,8 +2,8 @@
 display: grid;
 grid-template-columns: repeat(2, 1fr);
 grid-template-rows: repeat(auto, 1fr);
-grid-column-gap: 20px;
-grid-row-gap: 30px;
+grid-column-gap: 10px;
+grid-row-gap: 0;
 margin: 0 auto;
 justify-items: center;
 margin-top: 20px;
